--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,16 +1,15 @@
 name: Docker Build and Push Image
 
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Tag version'
-        required: true
-  push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
-      - 'v[0-9]+.[0-9]+'
-      - 'v[0-9]+'
+    workflow_dispatch:
+        inputs:
+            version:
+                description: 'Verison for manual trigger'
+                required: true
+                type: string
+    push:
+        tags:
+            - 'v[0-9]+.[0-9]+.[0-9]+'
 
 env:
   AWS_REGION: eu-central-1
