--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,4 +1,4 @@
-name: Docker Build and Push Image to ECR
+name: Create and publish a Docker image
 
 on:
     workflow_dispatch:
@@ -12,98 +12,72 @@ on:
             - 'v[0-9]+.[0-9]+.[0-9]+'
 
 env:
-  AWS_REGION: eu-central-1
-  AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }} 
-  ECR_REPOSITORY_NAME: private-ecr
-  HELM_RELEASE_NAME: todo
-  HELM_CHART_PATH: infrastructure/Helm
-  EKS_NAME: task2_eks
+    REGISTRY: ghcr.io
+    IMAGE_NAME: ${{ github.repository }}
+    IMAGE_TAG: ${{github.event_name == 'push' && github.ref_name || inputs.version}}
+    AWS_REGION: eu-central-1
+    AWS_ECR_REPOSITORY: private-ecr
+    CLUSTER_NAME: eks-sbraunovic-cluster
+    RELEASE_NAME: todo-app
 
 jobs:
-  build-and-push-docker-image:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+    test-app:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - name: Use Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: '18.x'
+            - run: npm install
+            - run: npm test
 
-    - name: Log intoGitHub Packages
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login -u "${{ github.actor }}" --password-stdin docker.pkg.github.com
+    build-and-push-image:
+        needs: test-app
+        runs-on: ubuntu-latest
+        permissions:
+            id-token: write
+            contents: read
+            packages: write
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
 
-    - name: Choose Tag
-      id: tag
-      run: |
-        if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-          echo "::set-output name=primary_tag::${{ inputs.version }}"
-        else
-          echo "::set-output name=primary_tag::${{ github.ref_name }}"
-        fi
-    
-    - name: Print Tag Values
-      run: |
-        echo "Primary tag value: ${{ steps.tag.outputs.primary_tag }}"
-    
-    - name: Build Docker Image
-      run: |
-        docker build -t docker.pkg.github.com/${{ github.repository }}/test-app2:${{ steps.tag.outputs.primary_tag }} .
+            - name: Log in to the Container registry
+              uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+              with:
+                  registry: ${{ env.REGISTRY }}
+                  username: ${{ github.actor }}
+                  password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Push Docker Image with Primary Tag
-      run: |
-        docker push docker.pkg.github.com/${{ github.repository }}/test-app2:${{ steps.tag.outputs.primary_tag }}
+            - name: Configure AWS Credentials
+              uses: aws-actions/configure-aws-credentials@v4
+              with:
+                  role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+                  aws-region: ${{env.AWS_REGION}}
 
-    - name: Tag and Push Docker Image as Latest
-      run: |
-        docker tag docker.pkg.github.com/${{ github.repository }}/test-app2:${{ steps.tag.outputs.primary_tag }} docker.pkg.github.com/${{ github.repository }}/test-app2:latest
-        docker push docker.pkg.github.com/${{ github.repository }}/test-app2:latest
-    
-    outputs:
-      tag-version: ${{steps.tag.outputs.primary_tag}}
+            - name: Login to Amazon ECR
+              id: login-ecr
+              uses: aws-actions/amazon-ecr-login@v2
+              with:
+                  registries: ${{ secrets.AWS_ACCOUNT_ID }}
+                  mask-password: 'true'
 
+            - name: Build and push Docker image
+              uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+              with:
+                  context: .
+                  push: true
+                  tags: |
+                      ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{env.IMAGE_TAG}}
+                      ${{ steps.login-ecr.outputs.registry}}/${{ env.AWS_ECR_REPOSITORY }}:docker-${{env.IMAGE_TAG}}
+            - name: Set up helm
+              uses: azure/setup-helm@v4.2.0
+              with:
+                  version: 'v3.14.4'
+              id: install
 
-  helm-release:
-    needs: build-and-push-docker-image
-    runs-on: ubuntu-latest
-
-    permissions:
-      id-token: write
-      contents: read
-    
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-    
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{secrets.GITHUB_TOKEN}}
-
-    - name: Auth with OIDC
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        role-to-assume:${{sercrets.AWS_ROLE_ARN}}
-        aws-region: ${{ env.AWS_REGION }}
-
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v2
-      with:
-        registries: ${{ env.AWS_ACCOUNT_ID }}
-        mask-password: 'true'
-      
-    - name: Set up helm
-      uses: azure/setup-helm@v4.2.0
-      with:
-        version: 'v3.14.4'
-      id: install
-
-    - name: Update kubeconfig
-      run: |
-        aws eks update-kubeconfig --name ${{ env.CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
-
-    - name: Upgrade Helm Release
-      run: |
-        helm upgrade ${{ env.HELM_RELEASE_NAME }} oci://${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY_NAME }} -n vegait-training --set image.tag=${{ needs.build-and-push-docker-image.outputs.tag-version }} --reuse-values
-
-    
+            - name: Upgrade helm chart
+              run: |
+                  aws eks update-kubeconfig --name ${{ env.CLUSTER_NAME }} --region ${{ env.AWS_REGION }} 
+                  helm upgrade --reuse-values --set "app.tag"="docker-${{ env.IMAGE_TAG }}" --namespace vegait-training ${{env.RELEASE_NAME}} oci://${{ steps.login-ecr.outputs.registry}}/${{ env.AWS_ECR_REPOSITORY }}
