--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -13,7 +13,7 @@ on:
 
 env:
     REGISTRY: ghcr.io
-    IMAGE_NAME: ${{ github.repository }}
+    IMAGE_NAME: "sbraunovicomega/docker-nodejs-sample-advance"
     IMAGE_TAG: ${{github.event_name == 'push' && github.ref_name || inputs.version}}
     AWS_REGION: eu-central-1
     AWS_ECR_REPOSITORY: private-ecr
